# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/Core/: Camera.h  Ray.h  Vec3.h
include/Hitables/: AABB.h  BVHNode.h  Box.h  ConstantMedium.h  FlipNormals.h  Hitable.h  HitableList.h  MovingSphere.h  Rectangle.h  Rotate.h  Sphere.h  Translate.h
include/Materials/: Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  Metal.h
include/Textures/: CheckerTexture.h  ConstantTexture.h  MarbleTexture.h  NoiseTexture.h  Texture.h
include/Utils/: PerlinNoise.h  RandomGenerator.h  pcg_random.hpp  pcg_uint128.hpp  stb_image.h
src/: main.cpp
src/Core/: Camera.cpp  Ray.cpp
src/Hitables/: AABB.cpp  BVHNode.cpp  Box.cpp  ConstantMedium.cpp  FlipNormals.cpp  HitableList.cpp  MovingSphere.cpp  Rectangle.cpp  Rotate.cpp  Sphere.cpp  Translate.cpp
src/Materials/: Dielectric.cpp  DiffuseLight.cpp  Isotropic.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
src/Textures/: CheckerTexture.cpp  ConstantTexture.cpp  MarbleTexture.cpp  NoiseTexture.cpp
src/Utils/: PerlinNoise.cpp  RandomGenerator.cpp
